Set bootstrap-stylus 'px' to 'rem'

--- a/src/libs/bootstrap-stylus/bootstrap/alerts.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/alerts.styl
@@ -28,7 +28,7 @@
     margin-bottom 0
 
   > p + p
-    margin-top 5px
+    margin-top 0.05rem
 
 // Dismissible alerts
 //
@@ -36,13 +36,13 @@
 
 .alert-dismissable, // The misspelled .alert-dismissable was deprecated in 3.2.0.
 .alert-dismissible
-  padding-right ($alert-padding + 20)
+  padding-right ($alert-padding + 0.2)
 
   // Adjust close link position
   .close
     position relative
-    top -2px
-    right -21px
+    top -0.02rem
+    right -0.21rem
     color inherit
 
 // Alternate styles
