--- a/src/libs/bootstrap-stylus/bootstrap/code.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/code.styl
@@ -12,7 +12,7 @@ samp
 
 // Inline code
 code
-  padding 2px 4px
+  padding 0.02rem 0.04rem
   font-size 90%
   color $code-color
   background-color $code-bg
@@ -20,7 +20,7 @@ code
 
 // User input typically entered via keyboard
 kbd
-  padding 2px 4px
+  padding 0.02rem 0.04rem
   font-size 90%
   color $kbd-color
   background-color $kbd-bg
