--- a/src/libs/bootstrap-stylus/bootstrap/glyphicons.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/glyphicons.styl
@@ -16,7 +16,7 @@
 // Catchall baseclass
 .glyphicon
   position relative
-  top 1px
+  top 0.01rem
   display inline-block
   font-family 'Glyphicons Halflings'
   font-style normal
