--- a/src/libs/bootstrap-stylus/bootstrap/labels.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/labels.styl
@@ -29,7 +29,7 @@
   // Quick fix for labels in buttons
   .btn &
     position relative
-    top -1px
+    top -0.01rem
 
 // Colors
 // Contextual variations (linked labels get darker on :hover)
