--- a/src/libs/bootstrap-stylus/bootstrap/media.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/media.styl
@@ -1,6 +1,6 @@
 .media
   // Proper spacing between instances of .media
-  margin-top 15px
+  margin-top 0.15rem //15px
 
   &:first-child
     margin-top 0
@@ -22,11 +22,11 @@
 
 .media-right,
 .media > .pull-right
-  padding-left 10px
+  padding-left 0.1rem //10px
 
 .media-left,
 .media > .pull-left
-  padding-right 10px
+  padding-right 0.1rem //10px
 
 .media-left,
 .media-right,
@@ -43,7 +43,7 @@
 // Reset margins on headings for tighter default spacing
 .media-heading
   margin-top 0
-  margin-bottom 5px
+  margin-bottom 0.05rem //5px
 
 // Media list variation
 //
