--- a/src/libs/bootstrap-stylus/bootstrap/panels.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/panels.styl
@@ -196,7 +196,7 @@
     border-radius $panel-border-radius
 
     + .panel
-      margin-top 5px
+      margin-top 0.05rem
 
   .panel-heading
     border-bottom 0
