--- a/src/libs/bootstrap-stylus/bootstrap/tooltip.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/tooltip.styl
@@ -20,25 +20,25 @@
     opacity-ie($tooltip-opacity)
 
   &.top
-    margin-top -3px
+    margin-top -0.03rem
     padding $tooltip-arrow-width 0
 
   &.right
-    margin-left 3px
+    margin-left 0.03rem //3px
     padding 0 $tooltip-arrow-width
 
   &.bottom
-    margin-top 3px
+    margin-top 0.03rem //3px
     padding $tooltip-arrow-width 0
 
   &.left
-    margin-left -3px
+    margin-left -0.03rem //-3px
     padding 0 $tooltip-arrow-width
 
 // Wrapper for the tooltip content
 .tooltip-inner
   max-width $tooltip-max-width
-  padding 3px 8px
+  padding 0.03rem 0.08rem //3px 8px
   color $tooltip-color
   text-align center
   background-color $tooltip-bg
