--- a/src/libs/bootstrap-stylus/bootstrap/variables.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/variables.styl
@@ -1,9 +1,10 @@
 //
 // Variables
+// html字体需要设为100px, 以此为基准，1rem = 100px。
 // --------------------------------------------------
 
 //新增移动端default-space
-$default-space ?= 0.08rem
+$default-space ?= 0.08rem //8px
 
 //== Colors
 //
