--- a/src/libs/bootstrap-stylus/bootstrap/wells.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/wells.styl
@@ -5,9 +5,9 @@
 
 // Base class
 .well
-  min-height 20px
-  padding 19px
-  margin-bottom 20px
+  min-height 0.2rem
+  padding 0.19rem
+  margin-bottom 0.2rem //20px
   background-color $well-bg
   border 1px solid $well-border
   border-radius $border-radius-base
@@ -19,8 +19,8 @@
 
 // Sizes
 .well-lg
-  padding 24px
+  padding 0.24rem //24px
   border-radius $border-radius-large
 .well-sm
-  padding 9px
+  padding 0.09rem //9px
   border-radius $border-radius-small
