--- a/src/libs/bootstrap-stylus/bootstrap/badges.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/badges.styl
@@ -6,8 +6,8 @@
 // Base class
 .badge
   display inline-block
-  min-width 10px
-  padding 3px 7px
+  min-width 0.1rem
+  padding 0.03rem 0.07rem
   font-size $font-size-small
   font-weight $badge-font-weight
   color $badge-color
@@ -25,12 +25,12 @@
   // Quick fix for badges in buttons
   .btn &
     position relative
-    top -1px
+    top -0.01rem
 
   .btn-xs &,
   .btn-group-xs > .btn &
     top 0
-    padding 1px 5px
+    padding 0.01rem 0.05rem
 
   // Hover state, but only for links
   a&
@@ -50,7 +50,7 @@
     float right
 
   .list-group-item > & + &
-    margin-right 5px
+    margin-right 0.05rem
 
   .nav-pills > li > a > &
-    margin-left 3px
+    margin-left 0.03rem
