--- a/src/libs/bootstrap-stylus/bootstrap/breadcrumbs.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/breadcrumbs.styl
@@ -13,7 +13,7 @@
 
     + li:before
       content "" + $breadcrumb-separator + "\00a0" // Unicode space added since inline-block means non-collapsing white-space
-      padding 0 5px
+      padding 0 0.05rem
       color $breadcrumb-color
 
   > .active
