--- a/src/libs/bootstrap-stylus/bootstrap/button-groups.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/button-groups.styl
@@ -26,11 +26,11 @@
   .btn + .btn-group,
   .btn-group + .btn,
   .btn-group + .btn-group
-    margin-left -1px
+    margin-left -0.01rem
 
 // Optional Group multiple button groups together for a toolbar
 .btn-toolbar
-  margin-left -5px // Offset the first child's margin
+  margin-left -0.05rem // Offset the first child's margin
   clearfix()
 
   .btn,
@@ -41,7 +41,7 @@
   > .btn,
   > .btn-group,
   > .input-group
-    margin-left 5px
+    margin-left 0.05rem //5px
 
 .btn-group > .btn:not(:first-child):not(:last-child):not(.dropdown-toggle)
   border-radius 0
@@ -98,17 +98,17 @@
 
 // Give the line between buttons some depth
 .btn-group > .btn + .dropdown-toggle
-  padding-left 8px
-  padding-right 8px
+  padding-left 0.08rem //8px
+  padding-right 0.08rem
 
 .btn-group > .btn-lg + .dropdown-toggle
-  padding-left 12px
-  padding-right 12px
+  padding-left 0.12rem
+  padding-right 0.12rem
 
 // The clickable button for toggling the menu
 // Remove the gradient and set the same inset shadow as the :active state
 .btn-group.open .dropdown-toggle
-  box-shadow inset 0 3px 5px rgba(0, 0, 0, .125)
+  box-shadow inset 0 0.03rem 0.05rem rgba(0, 0, 0, .125)
 
   // Show no shadow for `.btn-link` since it has no other button styles.
   &.btn-link
@@ -151,7 +151,7 @@
   > .btn + .btn-group,
   > .btn-group + .btn,
   > .btn-group + .btn-group
-    margin-top -1px
+    margin-top -0.01rem
     margin-left 0
 
 .btn-group-vertical > .btn
