--- a/src/libs/bootstrap-stylus/bootstrap/buttons.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/buttons.styl
@@ -37,7 +37,7 @@
   &.active
     outline 0
     background-image none
-    box-shadow inset 0 3px 5px rgba(0, 0, 0, .125)
+    box-shadow inset 0 0.03rem 0.05rem rgba(0, 0, 0, .125)
 
   &.disabled,
   &[disabled],
@@ -139,7 +139,7 @@
 
 // Vertically space out multiple block buttons
 .btn-block + .btn-block
-  margin-top 5px
+  margin-top 0.05rem //5px
 
 // Specificity overrides
 input[type="submit"],
