--- a/src/libs/bootstrap-stylus/bootstrap/carousel.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/carousel.styl
@@ -120,24 +120,24 @@
   .glyphicon-chevron-right
     position absolute
     top 50%
-    margin-top -10px
+    margin-top -0.1rem //-10px
     z-index 5
     display inline-block
 
   .icon-prev,
   .glyphicon-chevron-left
     left 50%
-    margin-left -10px
+    margin-left -0.1rem
 
   .icon-next,
   .glyphicon-chevron-right
     right 50%
-    margin-right -10px
+    margin-right -0.1rem
 
   .icon-prev,
   .icon-next
-    width 20px
-    height 20px
+    width 0.2rem
+    height 0.2rem //20px
     line-height 1
     font-family serif
 
@@ -156,7 +156,7 @@
 
 .carousel-indicators
   position absolute
-  bottom 10px
+  bottom 0.1rem //10px
   left 50%
   z-index 15
   width 60%
@@ -167,12 +167,12 @@
 
   li
     display inline-block
-    width 10px
-    height 10px
-    margin 1px
-    text-indent -999px
+    width 0.1rem
+    height 0.1rem
+    margin 0.01rem
+    text-indent -9.99rem
     border 1px solid $carousel-indicator-border-color
-    border-radius 10px
+    border-radius 0.1rem
     cursor pointer
 
     // IE8-9 hack for event handling
@@ -189,8 +189,8 @@
 
   .active
     margin 0
-    width 12px
-    height 12px
+    width 0.12rem
+    height 0.12rem
     background-color $carousel-indicator-active-bg
 
 // Optional captions
@@ -200,10 +200,10 @@
   position absolute
   left 15%
   right 15%
-  bottom 20px
+  bottom 0.2rem
   z-index 10
-  padding-top 20px
-  padding-bottom 20px
+  padding-top 0.2rem
+  padding-bottom 0.2rem
   color $carousel-caption-color
   text-align center
   text-shadow $carousel-text-shadow
@@ -237,8 +237,8 @@
   .carousel-caption
     left 20%
     right 20%
-    padding-bottom 30px
+    padding-bottom 0.3rem
 
   // Move up the indicators
   .carousel-indicators
-    bottom 20px
+    bottom 0.2rem
