--- a/src/libs/bootstrap-stylus/bootstrap/list-group.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/list-group.styl
@@ -9,7 +9,7 @@
 
 .list-group
   // No need to set list-style none since .list-group-item is block level
-  margin-bottom 20px
+  margin-bottom 0.2rem //20px
   padding-left 0 // reset padding because ul and ol
 
 
@@ -20,9 +20,9 @@
 .list-group-item
   position relative
   display block
-  padding 10px 15px
+  padding 0.1rem 0.15rem //10px 15px
   // Place the border on the list items and negative margin up for better styling
-  margin-bottom -1px
+  margin-bottom -0.01rem
   background-color $list-group-bg
   border 1px solid $list-group-border
 
@@ -110,7 +110,7 @@ list-group-item-variant(danger, $state-danger-bg, $state-danger-text)
 
 .list-group-item-heading
   margin-top 0
-  margin-bottom 5px
+  margin-bottom 0.05rem
 .list-group-item-text
   margin-bottom 0
   line-height 1.3
