--- a/src/libs/bootstrap-stylus/bootstrap/mixins/forms.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/mixins/forms.styl
@@ -20,11 +20,11 @@ form-control-validation($text-color = #555, $border-color = #ccc, $background-co
   // Set the border and box shadow on specific inputs to match
   .form-control
     border-color $border-color
-    box-shadow inset 0 1px 1px rgba(0, 0, 0, .075) // Redeclare so transitions work
+    box-shadow inset 0 0.01rem 0.01rem rgba(0, 0, 0, .075) // Redeclare so transitions work
 
     &:focus
       border-color darken($border-color, 10)
-      box-shadow inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px lighten($border-color, 20)
+      box-shadow inset 0 0.01rem 0.01rem rgba(0, 0, 0, .075), 0 0 0.06rem lighten($border-color, 20)
 
   // Set validation states also for addons
   .input-group-addon
@@ -55,7 +55,7 @@ form-control-focus($color = $input-border-focus)
   &:focus
     border-color $color
     outline 0
-    box-shadow inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px $color-rgba
+    box-shadow inset 0 0.01rem 0.01rem rgba(0, 0, 0, .075), 0 0 0.08rem $color-rgba
 
 // Form control sizing
 //
