--- a/src/libs/bootstrap-stylus/bootstrap/navs.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/navs.styl
@@ -74,7 +74,7 @@
 
     // Actual tabs (as links)
     > a
-      margin-right 2px
+      margin-right 0.02rem //2px
       line-height $line-height-base
       border 1px solid transparent
       border-radius $border-radius-base $border-radius-base 0 0
@@ -105,7 +105,7 @@
       border-radius $nav-pills-border-radius
 
     + li
-      margin-left 2px
+      margin-left 0.02rem //2px
 
     // Active state
     &.active > a
@@ -122,7 +122,7 @@
     float none
 
     + li
-      margin-top 2px
+      margin-top 0.02rem //2px
       margin-left 0 // no need for this gap between nav items
 
 
@@ -140,7 +140,7 @@
 
     > a
       text-align center
-      margin-bottom 5px
+      margin-bottom 0.05rem //5px
 
   > .dropdown .dropdown-menu
     top auto
