--- a/src/libs/bootstrap-stylus/bootstrap/pager.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/pager.styl
@@ -15,7 +15,7 @@
     > a,
     > span
       display inline-block
-      padding 5px 14px
+      padding 0.05rem 0.14rem
       background-color $pager-bg
       border 1px solid $pager-border
       border-radius $pager-border-radius
