--- a/src/libs/bootstrap-stylus/bootstrap/popovers.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/popovers.styl
@@ -22,7 +22,7 @@
   border 1px solid $popover-fallback-border-color
   border 1px solid $popover-border-color
   border-radius $border-radius-large
-  box-shadow 0 5px 10px rgba(0, 0, 0, .2)
+  box-shadow 0 0.05rem 0.1rem rgba(0, 0, 0, .2)
 
   // Offset the popover to account for the popover arrow
   &.top
@@ -39,14 +39,14 @@
 
 .popover-title
   margin 0 // reset heading margin
-  padding 8px 14px
+  padding 0.08rem 0.14rem //8px 14px
   font-size $font-size-base
   background-color $popover-title-bg
   border-bottom 1px solid darken($popover-title-bg, 5)
   border-radius ($border-radius-large - 1) ($border-radius-large - 1) 0 0
 
 .popover-content
-  padding 9px 14px
+  padding 0.09rem 0.14rem //9px 14px
 
 // Arrows
 //
