--- a/src/libs/bootstrap-stylus/bootstrap/progress-bars.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/progress-bars.styl
@@ -16,7 +16,7 @@
 // Spec and IE10+
 @keyframes progress-bar-stripes
   from
-    background-position 40px 0
+    background-position 0.4rem 0
   to
     background-position 0 0
 
@@ -54,7 +54,7 @@
 .progress-striped .progress-bar,
 .progress-bar-striped
   gradient-striped()
-  background-size 40px 40px
+  background-size 0.4rem 0.4rem //40px 40px
 
 // Call animation for the active one
 //
