--- a/src/libs/bootstrap-stylus/bootstrap/theme.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/theme.styl
@@ -29,7 +29,7 @@
   // Reset the shadow
   &:active,
   &.active
-    box-shadow inset 0 3px 5px rgba(0, 0, 0, .125)
+    box-shadow inset 0 0.03rem 0.05rem rgba(0, 0, 0, .125)
 
   &.disabled,
   &[disabled],
@@ -49,7 +49,7 @@ btn-styles($btn-color = #555)
   &:hover,
   &:focus
     background-color darken($btn-color, 12)
-    background-position 0 -15px
+    background-position 0 -0.15rem //-15px
 
   &:active,
   &.active
@@ -131,12 +131,12 @@ btn-styles($btn-color = #555)
   gradient-vertical(lighten($navbar-default-bg, 10), $navbar-default-bg)
   reset-filter() // Remove gradient in IE<10 to fix bug where dropdowns don't get triggered
   border-radius $navbar-border-radius
-  box-shadow inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 5px rgba(0, 0, 0, .075)
+  box-shadow inset 0 0.01rem 0 rgba(255, 255, 255, .15), 0 0.01rem 0.05rem rgba(0, 0, 0, .075)
 
   .navbar-nav > .open > a,
   .navbar-nav > .active > a
     gradient-vertical(darken($navbar-default-link-active-bg, 5), darken($navbar-default-link-active-bg, 2))
-    box-shadow inset 0 3px 9px rgba(0, 0, 0, .075)
+    box-shadow inset 0 0.03rem 0.09rem rgba(0, 0, 0, .075)
 
 .navbar-brand,
 .navbar-nav > li > a
@@ -151,7 +151,7 @@ btn-styles($btn-color = #555)
   .navbar-nav > .open > a,
   .navbar-nav > .active > a
     gradient-vertical($navbar-inverse-link-active-bg, lighten($navbar-inverse-link-active-bg, 2.5))
-    box-shadow inset 0 3px 9px rgba(0, 0, 0, .25)
+    box-shadow inset 0 0.03rem 0.09rem rgba(0, 0, 0, .25)
 
   .navbar-brand,
   .navbar-nav > li > a
