--- a/src/libs/bootstrap-stylus/bootstrap/type.styl
+++ b/src/libs/bootstrap-stylus/bootstrap/type.styl
@@ -185,12 +185,12 @@ ol
 
 // Inline turns list items into inline-block
 .list-inline
-  margin-left -5px
+  margin-left -0.05rem //-5px
 
   > li
     display inline-block
-    padding-left 5px
-    padding-right 5px
+    padding-left 0.05rem //5px
+    padding-right 0.05rem //5px
 
 // Description Lists
 dl
@@ -248,7 +248,7 @@ blockquote
   padding ($line-height-computed / 2) $line-height-computed
   margin 0 0 $line-height-computed
   font-size $blockquote-font-size
-  border-left 5px solid $blockquote-border-color
+  border-left 0.05rem solid $blockquote-border-color
 
   p,
   ul,
@@ -274,9 +274,9 @@ blockquote
 // Heads up `blockquote.pull-right` has been deprecated as of v3.1.0.
 .blockquote-reverse,
 blockquote.pull-right
-  padding-right 15px
+  padding-right 0.15rem
   padding-left 0
-  border-right 5px solid $blockquote-border-color
+  border-right 0.05rem solid $blockquote-border-color
   border-left 0
   text-align right
 
