1688Web : slider WIP

--- a/src/apps/1688Admin/webapp/index.pug
+++ b/src/apps/1688Admin/webapp/index.pug
@@ -55,152 +55,152 @@ block js
                     btn_addon : "<div class='sel-arrow'></div>"
                 },
                 {
-                    title : "幼儿管理",
+                    title : "一级菜单",
                     icon_class : "fa fa-users",
                     selected : false,
                     btn_addon : "<div class='sel-arrow'></div>",
                     submenu : [
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "入院管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-user-plus",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "档案管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-file-o",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
                         },
                         {
-                            title : "考勤管理",
+                            title : "二级菜单",
                             icon_class : "fa fa-calendar",
                             selected : false,
                             btn_addon : "<div class='sel-arrow'></div>",
                             submenu : [
                                 {
-                                    title : "考勤录入",
+                                    title : "三级菜单",
                                     icon_class : "fa fa-calendar",
                                     selected : false,
                                     btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                                     btn_addon : "<div class='sel-arrow'></div>"
                                 },
                                 {
-                                    title : "考勤统计",
+                                    title : "三级菜单",
                                     icon_class : "fa fa-bar-chart",
                                     selected : false,
                                     btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
@@ -226,6 +226,13 @@ block js
                         {
                             title : "数据字典",
                             icon_class : "fa fa-book",
+                            selected : false,
+                            btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
+                            btn_addon : "<div class='sel-arrow'></div>"
+                        },
+                        {
+                            title : "权限管理",
+                            icon_class : "fa fa-lock",
                             selected : false,
                             btn_props : "data-toggle='iframelinker' data-target='.main-iframe' data-link='dashboard.html'",
                             btn_addon : "<div class='sel-arrow'></div>"
