--- a/src/apps/1688Web/webapp/layout.pug
+++ b/src/apps/1688Web/webapp/layout.pug
@@ -1,3 +1,8 @@
+-
+    var IMG_DIR = "../images/"
+    var JS_DIR = "../js/"
+    var CSS_DIR = "../css/"
+
 doctype html
 html
     head
@@ -6,29 +11,14 @@ html
         meta(name='description', content='hisense')
         meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0')
         meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
-        title 1688Admin
+        title 1688Web
         block css
-            link(rel='stylesheet', href='../css/font-awesome.min.css')
-            link(rel='stylesheet', href='../css/bootstrap-datetimepicker.min.css')
-            link(rel='stylesheet', href='../css/bootstrap-table.min.css')
-            link(rel='stylesheet', href='../css/bootstrapValidator.min.css')
-            link(rel='stylesheet', href='../css/bootstrap-editable.css')
-            link(rel='stylesheet', href='../css/bootstrap-treeview.min.css')
-            link(rel='stylesheet', href='../css/index.css')
+            link(rel='stylesheet', href = CSS_DIR + 'font-awesome.min.css')
+            link(rel='stylesheet', href = CSS_DIR + 'index.css')
             
     body
         block content
         block js
-            script(src='../js/jquery.min.js')
-            script(src='../js/bootstrap.min.js')
-            script(src='../js/moment/moment.min.js')
-            script(src='../js/moment/zh-cn.js')
-            script(src='../js/bootstrap-datetimepicker.min.js')
-            script(src='../js/bootstrap-table/bootstrap-table.min.js')
-            script(src='../js/bootstrap-table/bootstrap-table-zh-CN.min.js')
-            script(src='../js/bootstrap-table/bootstrap-table-editable.min.js')
-            script(src='../js/bootstrap-editable.min.js')
-            script(src='../js/bootstrapvalidator/bootstrapValidator.min.js')
-            script(src='../js/bootstrapvalidator/zh_CN.js')
-            script(src='../js/bootstrap-treeview.min.js')
-            script(src='../js/app.js')
+            script(src = JS_DIR + 'jquery.min.js')
+            script(src = JS_DIR + 'bootstrap.min.js')
+            script(src = JS_DIR + 'app.js')
